remove my email

--- a/dynamodb_alarms_cf/dynamodb_alarms_cf.yaml
+++ b/dynamodb_alarms_cf/dynamodb_alarms_cf.yaml
@@ -51,7 +51,7 @@ Resources:
     Properties: 
       DisplayName: DynamoDB Monitoring SNS Topic
       Subscription: 
-        - Endpoint: ctindel@amazon.com
+        - Endpoint: !Ref DynamoDBSNSEmail
           Protocol: email
       TopicName: dynamodb-monitoring
   DynamoDBScalingRole: 
